# libnextimage

./: .gitignore  .gitmodules  COMPAT.md  DEPENDENCIES.txt  INTERFACE_MIGRATION.md  LICENSE  Makefile  OPTION-REVIEW.md  PROGRESS.md  README.md  README_ja.md  RELEASE.md  SPEC.md  SPEC_COMPLIANCE_CHECK.md  TEST-SPEC.md  TYPESCRIPT.md  go.mod
.github/: toolchain-linux-arm64.cmake
.github/workflows/: release.yml  test.yml  update-binaries.yml
c/: CMakeLists.txt  README.md  README_ja.md
c/include/: avif.h  nextimage.h  webp.h
c/include/nextimage/: avifdec.h  avifenc.h  cwebp.h  dwebp.h  gif2webp.h  webp2gif.h
c/src/: avif.c  common.c  internal.h  webp.c
c/test/: avif_test.c  basic_test.c  command_interface_test.c  decoder_test.c  header_test.c  leak_counter_test.c  simple_test.c  webp_test.c
c/test/sanitizer/: sanitizer_test.c
examples/bun/: .gitignore  Makefile  README.md  package.json
examples/bun/scripts/: basic-encode.ts
examples/deno/: .gitignore  Makefile  README.md  deno.json
examples/deno/scripts/: basic-encode.ts
examples/golang/: .gitignore  Makefile  README.md  batch_convert.go  go.mod  jpeg_to_avif.go  jpeg_to_webp.go
examples/nodejs/: .gitignore  Makefile  README.md  package.json
examples/nodejs/scripts/: all-features.js  basic-encode.js  batch-process.js  decode-test.js
golang/: .gitignore  README.md  README_ja.md  advanced_compat_test.go  avif.go  avif_compat_test.go  avif_convert.go  avif_convert_test.go  avif_encoder.go  avif_test.go  avifdec.go  avifenc.go  common.go  compat_test.go  cwebp.go  decode_compat_test.go  download.go  dwebp.go  encoder_test.go  gif2webp.go  gif2webp_compat_test.go  gif_webp.go  gif_webp_anim_test.go  gif_webp_test.go  go.mod  integration_test.go  version.go  webp.go  webp2gif.go  webp_advanced_test.go  webp_convert.go  webp_convert_test.go  webp_encoder.go  webp_test.go
golang/avifdec/: avifdec.go  avifdec_test.go  generate_test_avif.go  go.mod  jpeg_test.go
golang/avifenc/: avifenc.go  avifenc_test.go  go.mod
golang/cmd/install/: main.go
golang/cwebp/: README.md  cwebp.go  cwebp_test.go  go.mod  metadata_test.go
golang/dwebp/: README.md  crop_resize_test.go  dwebp.go  dwebp_test.go  generate_test_webp.go  go.mod  jpeg_test.go
golang/gif2webp/: gif2webp.go  gif2webp_test.go  go.mod
golang/shared/include/: avif.h
golang/shared/include/nextimage/: cwebp.h
golang/webp2gif/: go.mod  webp2gif.go  webp2gif_test.go
include/nextimage/: dwebp.h
scripts/: build-c-library.sh  build-cli-tools.sh  generate-gif-samples.sh  generate-test-images.sh  generate-testdata.sh  install.sh  release-golang-module.sh  setup-go-module.sh  test-compat-webp.sh
testdata/avif/: red.avif
testdata/metadata/: test.exif  test.icc  test.xmp
typescript/: .gitignore  .npmignore  IMPLEMENTATION-STATUS.md  README.md  README_ja.md  VERSION-MANAGEMENT.md  library-version.json  package-lock.json  package.json  tsconfig.json
typescript-proto/: README.md  package-lock.json  package.json  tsconfig.json
typescript-proto/examples/: check-library.js
typescript-proto/src/: webp.ts
typescript/bun/: ffi.ts  library.ts  mod.ts  webp-encoder.ts
typescript/deno/: ffi.ts  library.ts  mod.ts  webp-encoder.ts
typescript/examples/: check-library.d.ts  check-library.ts
typescript/src/: avif-decoder.ts  avif-encoder.ts  avif.ts  ffi.ts  gif2webp-converter.ts  index.ts  library.ts  types.ts  webp-decoder.ts  webp-encoder.ts  webp-old.ts  webp2gif-converter.ts
typescript/test/: avif.test.d.ts.map  avif.test.ts  gif-conversion.test.ts  library.test.d.ts.map  library.test.ts  webp-encode.test.ts  webp.test.d.ts.map  webp.test.ts
